// ============================================================================
// 1. DEFINIÇÃO DAS TABELAS
// ============================================================================

Table localizaciones {
  id int [pk, increment]
  edificio varchar(50) [not null]
  piso varchar(20) [not null]
  servico_departamento varchar(100) [not null]
  sala_gabinete varchar(50) [not null]
  estado varchar(20) [default: 'Ativo']

  Indexes {
    (edificio, piso, servico_departamento, sala_gabinete) [unique, name: "uq_localizacao"]
  }
}

Table fornecedores {
  id int [pk, increment]
  nome_empresa varchar(150) [not null]
  nif varchar(20) [unique, not null]
  contacto_telefonico varchar(20)
  email varchar(100)
  morada text
  website varchar(255)
  pessoa_contacto varchar(100)
  telefone_pessoa_contacto varchar(20)
  observacoes text
  estado varchar(20) [default: 'Ativo']
}

Table equipamentos {
  id int [pk, increment]
  codigo_interno varchar(50) [unique, not null]
  designacao varchar(150) [not null]
  categoria enum // 'Monitorização','Suporte de vida','Terapia','Diagnóstico','Laboratório','Esterilização','Reabilitação'
  marca varchar(100) [not null]
  modelo varchar(100) [not null]
  numero_serie varchar(100) [not null]
  fabricante varchar(150) [not null]
  data_aquisicao date [not null]
  ano_fabrico int [not null]
  custo_aquisicao decimal(10,2) [not null]
  tipo_entrada enum // 'Compra','Doação','Aluguer','Empréstimo'
  estado_atual enum // 'Ativo','Em manutenção','Inativo','Em calibração','Em quarentena','Abatido'
  criticidade enum // 'Baixa','Média','Alta','Suporte de vida'
  localizacao_id int [not null]
  observacoes text
  criado_em timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (marca, modelo, numero_serie) [unique, name: "uq_fabricante_modelo_serie"]
  }
}

Table equipamento_fornecedor {
  equipamento_id int [not null]
  fornecedor_id int [not null]
  tipo_fornecedor enum // 'Fabricante','Distribuidor ou fornecedor comercial','Empresa de assistência técnica','Fornecedor de consumíveis ou acessórios'

  Indexes {
    (equipamento_id, fornecedor_id, tipo_fornecedor) [pk]
  }
}

Table garantias_contratos {
  id int [pk, increment]
  equipamento_id int [unique, not null]
  data_inicio_garantia date
  data_fim_garantia date
  tem_contrato_manutencao boolean [default: false]
  tipo_contrato varchar(100)
  entidade_responsavel_id int
  periodicidade varchar(50)
  observacoes text
  estado varchar(20) [default: 'Ativo']
}

Table componentes_associados {
  id int [pk, increment]
  equipamento_pai_id int [not null]
  codigo_componente varchar(50) [not null]
  designacao_componente varchar(150) [not null]
  numero_serie_componente varchar(100)
  observacoes text
  estado varchar(20) [default: 'Ativo']
}

Table documentacao {
  id int [pk, increment]
  tipo_documento enum // 'Manual de utilizador','Manual de serviço','Certificado de calibração','Contrato de manutenção','Fatura ou guia de aquisição','Declaração de conformidade','Relatório técnico'
  nome_documento varchar(150) [not null]
  nome_ficheiro_caminho varchar(255) [not null]
  data_documento date [not null]
  data_validade date
  equipamento_id int [not null]
  criado_em timestamp [default: `CURRENT_TIMESTAMP`]
  estado varchar(20) [default: 'Ativo']
}

Table utilizadores {
  id int [pk, increment]
  username varchar(50) [unique, not null]
  password_hash varchar(255) [not null]
}

Table administradores {
  utilizador_id int [pk]
  criado_em timestamp [default: `CURRENT_TIMESTAMP`]
}

Table textos_interface {
  id int [pk, increment]
  chave varchar(100) [unique, not null]
  conteudo text [not null]
  updated_at timestamp
}

// ============================================================================
// 2. RELAÇÕES (CHAVES ESTRANGEIRAS)
// ============================================================================

Ref: equipamentos.localizacao_id > localizaciones.id [delete: restrict, update: cascade]

Ref: equipamento_fornecedor.equipamento_id > equipamentos.id [delete: cascade, update: cascade]

Ref: equipamento_fornecedor.fornecedor_id > fornecedores.id [delete: restrict, update: cascade]

Ref: garantias_contratos.entidade_responsavel_id > fornecedores.id [delete: set null, update: cascade]

Ref: componentes_associados.equipamento_pai_id > equipamentos.id [delete: cascade, update: cascade]

Ref: documentacao.equipamento_id > equipamentos.id [delete: cascade, update: cascade]

Ref: administradores.utilizador_id - utilizadores.id [delete: cascade]

Ref: garantias_contratos.equipamento_id - equipamentos.id [delete: cascade, update: cascade]